--- a/ShoppingCart/Views/Gallery/Product.cshtml
+++ b/ShoppingCart/Views/Gallery/Product.cshtml
@@ -9,6 +9,6 @@
 <h1 class="display-4">Products</h1>
 <p>@product.ProductName </p>
 <p>@product.Description </p>
-<p>@product.ImagePath </p>
+<p>@product.ImageName </p>
     
 </div>
