--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -1,29 +1,27 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - EFCore</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-            
+
     <div>
-      
-            <div class="topbar">
 
-                <div><p class="topcaption"> 20% Discount for two Items </p></div>
+        <div class="topbar">
 
-                <div class="account">
-                    <div>  My Account &#9660;</div>
-                    <div> Create Account </div>
-                </div>
+            <div><p class="topcaption"> 20% Discount for two Items </p></div>
 
+            <div class="account">
+                <div>  My Account &#9660;</div>
+                <div> Create Account </div>
             </div>
-       
+
+        </div>
+
 
         <div>
 
@@ -31,7 +29,7 @@
 
         </div>
     </div>
-      
+
 
 </body>
 </html>
