--- a/ShoppingCart/Views/Gallery/Index.cshtml
+++ b/ShoppingCart/Views/Gallery/Index.cshtml
@@ -4,6 +4,8 @@
 @{
 }
 <div class="text-center">
-<h1 class="display-4">Gallery</h1>
-<p>Page is under construction. Come back Next week</p>
+    <h1 class="display-4">Gallery</h1>
+    <form action="/Cart/Index" method="post">
+        <button type="submit">Go To Cart</button>
+    </form>
 </div>
