--- a/ShoppingCart/Views/Gallery/Product.cshtml
+++ b/ShoppingCart/Views/Gallery/Product.cshtml
@@ -1,14 +1,57 @@
 ﻿@{ 
 
     ViewData["Title"] = "Product";
-    Product product = (Product)ViewData["product"];
+    Product product = ViewBag.product;
+    string uploadDir = ViewBag.uploadDir;
+    string price = String.Format("S${0:0.00}", product.Price);
 
     }
 
 <div class="text-center">
-<h1 class="display-4">Products</h1>
-<p>@product.ProductName </p>
-<p>@product.Description </p>
-<p>@product.ImageName </p>
     
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-image">
+                    <tbody>
+                        <tr>
+                            <td class="w-15">
+                                <img id="@product.ImageName" class="my_img" src="@uploadDir/@product.ImageName" />
+                            </td>
+                            <td class="w-15">
+                                <h2>@product.ProductName </h2>
+                                <p>@product.Description </p>
+                                <p><b>@price</b></p>
+                                <p>
+                                    <button type="button" class="btn btn-primary">Add to Cart</button>
+                                </p>
+                            </td>
+                        </tr>
+                        
+                         <tr>
+                            <td class="rating_col">
+                                <img id="@product.ImageName" class="rating_img" src="@uploadDir/starYellow.png" />
+                           
+                                <img id="@product.ImageName" class="rating_img" src="@uploadDir/starYellow.png" />
+                          
+                                <img id="@product.ImageName" class="rating_img" src="@uploadDir/starYellow.png" />
+                            
+                                <img id="@product.ImageName" class="rating_img" src="@uploadDir/starWhite.png" />
+                           
+                                <img id="@product.ImageName" class="rating_img" src="@uploadDir/starWhite.png" />
+                            </td>
+                             <td>
+                                 </td>
+                        </tr>
+                       
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <hr>
+       
+        <h3>Product Reviews</h3>
+     </div>
+
 </div>
