--- a/ShoppingCart/wwwroot/css/site.css
+++ b/ShoppingCart/wwwroot/css/site.css
@@ -27,5 +27,30 @@ for details on configuring this project to bundle and minify static web assets. 
     font-family: Bahnschrift;
 }
 
+.my_img {
+    cursor: pointer;
+    width: 300px;
+
+}
+.rating_img {
+
+    padding-left: 10px;
+    cursor: pointer;
+    width: 33px;
+}
+.rating_col {
+
+    padding-left : 25px;
+    
+}
+
+.w-15 {
+    width: 15% !important;
+}
+
+.checked {
+    color: orange;
+}
+
 
 
