--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -1,34 +1,32 @@
 ﻿
 @{
-    ViewData["Title"] = "Home Page";
     string customerName = ViewBag.CurrentCustomer.FullName;
+    ViewData["Title"] = "Shopping Cart: " + customerName;
     List<Cart> itemsinCart = ViewBag.CustomerCart;
-    Product newitem = ViewBag.NewItem;
+    List<Product> productsinCart = ViewBag.ProductsInCart;
+    Dictionary<Product, int> countOfItems = ViewBag.CountOfItems;
 
 }
 
 <div class="text-center">
-    <h1>Welcome @customerName !</h1>
+    <h1>Welcome @(customerName)!</h1>
 
     <h3>Products</h3>
-    <table>
+    <table class="text-center">
         @{
-            foreach (Cart item in itemsinCart)
+            foreach (KeyValuePair<Product, int> pair in countOfItems)
             {
                 <tr>
-                    <td>@item.ProductId</td>
+                    <td>@pair.Value</td>
+                    <td>@pair.Key.ProductName</td>
+                    <td>@pair.Key.Price</td>
                 </tr>
             }
         }
 
-        
-        <tr>
-            <td>@newitem.ProductName</td>
-        </tr>
     </table>
    
-    <form action="Checkout" method="post">
-
+    <form action="/Cart/Checkout" method="post">
         <button type="submit">Checkout</button>
     </form>
 </div>
