View cart/ Update cart/ Remove Cart Method  (Cart controller)

--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿
 @{
+    ViewData["Title"] = "View Cart";
     string customerName = ViewBag.CurrentCustomer.FullName;
     ViewData["Title"] = "Shopping Cart: " + customerName;
     List<Cart> itemsinCart = ViewBag.CustomerCart;
