--- a/ShoppingCart/Views/Purchase/Index.cshtml
+++ b/ShoppingCart/Views/Purchase/Index.cshtml
@@ -1,8 +1,54 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Purchase Page";
+    List<Purchase> purchases = (List<Purchase>)ViewData["purchaseList"];
+    Dictionary<Guid, Product> productMaps = (Dictionary<Guid, Product>) ViewData["productMaps"];
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+    @*purchase list*@
+    @{
+        if (purchases.Count == 0)
+        {
+            <div class="container">
+                <div class="text-center p-5">
+                    <h2>No results... :(</h2>
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="container">
+                <div class="row">
+                    @{
+                        foreach (var purchase in purchases)
+                        {
+                            <div class="col-4 p-2">
+                                <div class="card">
+                                    <form action="/Gallery/Product" method="post">
+                                      
+                                    </form>
+                                    <div class="card-body">
+                                        <form action="/Gallery/Product" method="post">
+                                            <button type="submit" class="btn btn-link text-body p-0 m-0" name="productId" value="@purchase.Id">
+                                               
+                                            </button>
+                                        </form>
+                                        <h5 class="card-title">ProductId: @purchase.ProductId</h5>
+                                        <h5 class="card-title">PurchaesDate: @purchase.PurchaseDate</h5>
+                                        <h5 class="card-title">PurchaseQty: @purchase.PurchaseQty</h5>
+                                        <h5 class="card-title">Product Name: @productMaps.GetValueOrDefault(purchase.Id).ProductName</h5>
+                                        <h5 class="card-title">Product Description: @productMaps.GetValueOrDefault(purchase.Id).Description</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+            </div>
+        }
+    }
 </div>
