--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    string customerName = ViewBag.CurrentCustomer.FullName;
+    string customerName = ViewBag.CurrentUserName;
     ViewData["Title"] = "Shopping Cart: " + customerName;
-    List<Cart> itemsinCart = ViewBag.CustomerCart;
     List<Product> productsinCart = ViewBag.ProductsInCart;
     Dictionary<Product, int> countOfItems = ViewBag.CountOfItems;
 
