--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -24,14 +24,33 @@
                         </li>
 
                         <li class="nav-item">
+                            <!--if logged in, show purchases. if logged out, show login-->
+                            @*
+                                @{
+                                    if (ViewBag.LoggedIn = true)
+                                    {
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Purchases" asp-action="Index">My Purchases</a>
+
+                                    }
+                                    else
+                                    {
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                                    }
+                                }
+                            *@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                        </li>
+
+
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Purchases" asp-action="Index">My Purchases</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><img src="/Logo/cart-icon-28356.png" height="25", width="25"></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><img src="/Logo/cart-icon-28356.png" height="25" , width="25"></a>
                         </li>
                         <li class="nav-item">
-                            <div style="border-radius: 20px; background-color: #212121">
+                            <div style="border-radius: 20px; background-color: #ac2a2a">
                                 <a style="color: white" class="nav-link" asp-area="" asp-controller="Cart" asp-action="Index">@(ViewBag.CartContents)</a>
                             </div>
                         </li>
