--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -26,21 +26,24 @@
                         <li class="nav-item">
                             <!--if logged in, show purchases. if logged out, show login-->
                             @*
-                                @{
-                                    if (ViewBag.LoggedIn = true)
-                                    {
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Purchases" asp-action="Index">My Purchases</a>
+            @{
+                if (ViewBag.LoggedIn = true)
+                {
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Purchases" asp-action="Index">My Purchases</a>
 
-                                    }
-                                    else
-                                    {
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
-                                    }
-                                }
+                }
+                else
+                {
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                }
+            }
                             *@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Logout" asp-action="Index">Logout</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Purchases" asp-action="Index">My Purchases</a>
