--- a/ShoppingCart/wwwroot/css/site.css
+++ b/ShoppingCart/wwwroot/css/site.css
@@ -98,17 +98,25 @@ body {
     width: 100%;
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
-=======
+}
+
 .my_img {
     cursor: pointer;
     width: 300px;
 
 }
-.rating_img {
-
+.rating_imgV {
     padding-left: 10px;
     cursor: pointer;
     width: 33px;
+    
+}
+
+.rating_imgH {
+    padding-left: 10px;
+    cursor: pointer;
+    width: 33px;
+    visibility: hidden;
 }
 .rating_col {
 
@@ -122,6 +130,33 @@ body {
 
 .checked {
     color: orange;
+}
+
+.imageoverlap1 {
+    position: absolute;
+    left:230px
+    
+}
+.imageoverlap2 {
+    position: absolute;
+    left: 275px
+}
+.imageoverlap3 {
+    position: absolute;
+    left: 320px
+}
+.imageoverlap4 {
+    position: absolute;
+    left: 365px
+}
+.imageoverlap5 {
+    position: absolute;
+    left: 410px
+}
+
+.starDisplay {
+    display: flex;
+    position: relative;
 }
 
 
