--- a/ShoppingCart/Views/Cart/Checkout.cshtml
+++ b/ShoppingCart/Views/Cart/Checkout.cshtml
@@ -2,96 +2,108 @@
     ViewData["Title"] = "Home Page";
     Dictionary<Product, int>ListItemQuantities = ViewBag.ItemQty;
     List<Product> RandomList = ViewBag.ListOfRandomProds;
+    double totalPrice = ViewBag.TotalPrice;
     int rewardPoints = ViewBag.Reward;
     int additionalPoints = ViewBag.AdditionalPoint;
     //<img src="/Images/@product.ImageName" class="card-img-top" style="height: 260px" alt="...">
 }
 <style>
-    .receipt {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        align-content: center;
-        margin: 0;
-        width: 80%;
-        border: 2px solid black;
-        padding: 20px;
-    }
-
-    .recos {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        align-content: center;
-        margin: 0;
-        width: 80%;
-        border: 2px solid black;
-        padding: 20px;
+    td {
+        vertical-align: middle;
     }
 
 </style>
 
-<div class="text-center">
-    <h1 class="display-4">Thank you for your purchase!</h1>
-    <h2>You gained @(additionalPoints) from this purchase. You now have @(rewardPoints) points.</h2>
+<div class="container">
+    <div class="text-center">
+        <div style="margin-bottom:3%">
+            <h1 class="display-4">Thank you for your purchase!</h1>
+            <h3>You gained @(additionalPoints) from this purchase. You now have @(rewardPoints) points.</h3>
+        </div>
 
-    <div class="receipt text-center">
-        <table>
-            @{ foreach (KeyValuePair<Product, int> pair in ListItemQuantities)
-                {
-                    <tr>
-                        <td>@pair.Key.ProductName</td>
-                        <td>@pair.Value</td>
-                    </tr>
-                }
-            }
+        <table style="margin:auto">
+            <tr>
+                <td>
+                    <form action="/Purchase/Index" method="post">
+                        <button class ="btn btn-primary" type="submit">View My Purchases</button>
+                    </form>
+                </td>
+                <td style="padding: 0px 20px">
+                    |
+                </td>
+                <td>
+                    <form action="/Gallery/Index" method="post">
+                        <button class ="btn btn-outline-primary" type="submit">Continue Shopping</button>
+                    </form>
+                </td>
+            </tr>
         </table>
-    </div>
 
-    <div>
-        Interested in getting more? Try out the products below:
-    </div>
+        <div class="text-center">
+            <table class="table table-striped" style="margin-top: 3%; margin-bottom: 3%">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Total Amount</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{ foreach (KeyValuePair<Product, int> pair in ListItemQuantities)
+                        {
+                            <tr>
+                                <td class="text-center"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" style="height: 100px; width: 100px" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>@pair.Key.ProductName</b></td>
+                                <td class="text-center">@pair.Value</td>
+                                <td class="text-center">$@(pair.Key.Price.ToString("0,0.00"))</td>
+                                <td class="text-center">$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
+                            </tr>
+                        }
+                    }
 
-    <div class="recos text-center">
-        <div class="row">
-            @{ foreach (var product in RandomList)
-                {
-                    <div class="col-4 p-2">
-                        <div class="card">
-                            <form action="/Gallery/Product" method="post">
-                                <button type="submit" class="btn btn-link p-0" name="productId" value="@product.Id">
-                                    <img src="/Images/@product.ImageName" class="card-img-top" style="height: 180px" alt="...">
-                                </button>
-                            </form>
-                            <div class="card-body">
+                    <tr class="bg-primary" style="color:white">
+                        <td></td>
+                        <td></td>
+                        <td><b>TOTAL PRICE</b></td>
+                        <td><b>$@(totalPrice.ToString("0,0.00"))</b></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div style="margin-top: 3%; margin-bottom: 3%">
+            <h3>Interested in getting more? Try out the products below:</h3>
+        </div>
+
+        <div class="recos text-center">
+            <div class="row">
+                @{ foreach (var product in RandomList)
+                    {
+                        <div class="col-4 p-2">
+                            <div class="card">
                                 <form action="/Gallery/Product" method="post">
-                                    <button type="submit" class="btn btn-link text-body p-0 m-0" name="productId" value="@product.Id">
-                                        <h5 class="card-title">@product.ProductName</h5>
+                                    <button type="submit" class="btn btn-link p-0" name="productId" value="@product.Id">
+                                        <img src="/Images/@product.ImageName" class="card-img-top" style="height: 180px" alt="...">
                                     </button>
                                 </form>
-                                @*action to change to cartcontroller/addcart*@
-                                <form action="" method="post">
-                                    <button class="btn btn-outline-primary"><b>$@product.Price.ToString("0.00")</b>&nbsp;&nbsp;Add to cart</button>
-                                </form>
+                                <div class="card-body">
+                                    <form action="/Gallery/Product" method="post">
+                                        <button type="submit" class="btn btn-link text-body p-0 m-0" name="productId" value="@product.Id">
+                                            <h5 class="card-title">@product.ProductName</h5>
+                                        </button>
+                                    </form>
+                                    @*action to change to cartcontroller/addcart*@
+                                    <form action="" method="post">
+                                        <button class="btn btn-outline-primary"><b>$@product.Price.ToString("0.00")</b>&nbsp;&nbsp;Add to cart</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    }
                 }
-            }
+            </div>
         </div>
-    </div>
 
-    <table>
-        <tr>
-            <td>
-                <a class="text-dark" asp-area="" asp-controller="Purchases" asp-action="Index">My Purchases</a>
-            </td>
-            <td style="padding: 0px 20px">
-                |
-            </td>
-            <td>
-                <a class="text-dark" asp-area="" asp-controller="Gallery" asp-action="Index">Continue Shopping</a>
-            </td>
-        </tr>
-    </table>
+
+    </div>
 </div>
