Completed _Layout file

--- a/ShoppingCart/Views/Login/Index.cshtml
+++ b/ShoppingCart/Views/Login/Index.cshtml
@@ -10,7 +10,6 @@
         <div class="my_tbl">
             <div class="my_row">
                 <div class="my_cell">
-                    
                     Username
                 </div>
                 <div class="my_cell">
@@ -43,6 +42,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </form>
 
 
