--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -2,31 +2,68 @@
 @{
     ViewData["Title"] = "View Cart";
     string customerName = ViewBag.CurrentUserName;
-
+    double totalPrice = ViewBag.TotalPrice;
     ViewData["Title"] = "Shopping Cart: " + customerName;
     List<Product> productsinCart = ViewBag.ProductsInCart;
     Dictionary<Product, int> countOfItems = ViewBag.CountOfItems;
 }
 
-<div class="text-center">
+<div class="container">
     <h1>Welcome @(customerName)!</h1>
+    <div class="nav form-check-inline justify-content-end">
+        <form action="/Gallery/Index" method="post" style="margin-right: 1%;">
+            <button type="submit" class="btn btn-outline-primary" style="white-space:nowrap">Continue Shopping</button>
+        </form>
+        |
+        <form action="/Cart/Checkout" method="post" style="margin-left: 1%;">
+            <button type="submit" class="btn btn-primary">Checkout</button>
+        </form>
+    </div>
 
-    <h3>Products</h3>
-    <table class="text-center">
-        @{
-            foreach (KeyValuePair<Product, int> pair in countOfItems)
-            {
-                <tr>
-                    <td>@pair.Value</td>
-                    <td>@pair.Key.ProductName</td>
-                    <td>@pair.Key.Price</td>
-                </tr>
+    <table class="table table-striped" style="margin-top: 3%; margin-bottom: 3%">
+
+        <thead class="thead-light">
+            <tr>
+                <th colspan="4" class="align-items-md-start">Product Details</th>
+                <th class="text-center">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                foreach (KeyValuePair<Product, int> pair in countOfItems)
+                {
+                    <tr valign="middle">
+                        <td class="align-items-md-start"><img src="~/Images/@pair.Key.ImageName" alt="Alternate Text" style="height: 100px; width: 100px" /></td>
+                        <td class="align-items-md-start"><b>@pair.Key.ProductName</b></td>
+                        <td class="text-center">$@(pair.Key.Price.ToString("0,0.00"))</td>
+                        <td class="text-center">$@((pair.Key.Price*pair.Value).ToString("0,0.00"))</td>
+                        <td class="align-items-md-end">
+                            <button class="btn btn-outline-danger" style="margin-left: 3%; margin-right: 3%">-</button>
+                            <span style="margin-left: 3%; margin-right: 3%">@pair.Value</span>
+                            <button class="btn btn-success" style="margin-left: 3%; margin-right: 3%">+</button>
+                            <button class="btn btn-danger" style="margin-left: 5%; margin-right: 5%">X</button>
+                        </td>
+                    </tr>
+                }
             }
-        }
 
+            <tr class="bg-primary" style="color:white">
+                <td></td>
+                <td></td>
+                <td></td>
+                <td class="text-center"><b>TOTAL PRICE</b></td>
+                <td class="text-center"><b>$@(totalPrice.ToString("0,0.00"))</b></td>
+            </tr>
+        </tbody>
     </table>
-   
-    <form action="/Cart/Checkout" method="post">
-        <button type="submit">Checkout</button>
-    </form>
+
+    <div class="nav form-check-inline justify-content-end">
+        <form action="/Gallery/Index" method="post" style="margin-right: 1%;">
+            <button type="submit" class="btn btn-outline-primary" style="white-space:nowrap">Continue Shopping</button>
+        </form>
+        |
+        <form action="/Cart/Checkout" method="post" style="margin-left: 1%;">
+            <button type="submit" class="btn btn-primary">Checkout</button>
+        </form>
+    </div>
 </div>
